# jerboa

./: CMakeLists.txt  README
include/: BackEnd.h  CMakeLists.txt  CollectionInterface.h  Container.h  FrontEnd.h  JerboaPlugin.h  MimeData.h  PlayerInterface.h  PlaylistInterface.h  Plugin.h  TagReader.h  ToolBar.h  TrackData.h  TrackData_p.h  Types.h  Utilities.h  Uuid.h  WizardPage.h  config.h.cmake
src/: CMakeLists.txt  main.cpp
src/core/: Application.cpp  Application.h  CMakeLists.txt  CollectionInterface.cpp  Container.cpp  DatabaseWizardPage.cpp  DatabaseWizardPage.h  FirstRunWizard.cpp  FirstRunWizard.h  JerboaPlugin.cpp  MimeData.cpp  PlayerInterface.cpp  PlayerInterface_p.cpp  PlayerInterface_p.h  PlaylistInterface.cpp  PlaylistInterface_p.cpp  PlaylistInterface_p.h  Plugin.cpp  TagReader.cpp  ToolBar.cpp  TrackData.cpp  TrackData_p.cpp  TrackData_p.h  Utilities.cpp  Uuid.cpp  WizardPage.cpp  main.cpp  memcpy_safe.h  modeltest.cpp
src/plugins/: CMakeLists.txt
src/plugins/Boffin/: Boffin.cpp  Boffin.h  Boffin.qrc  CMakeLists.txt  CollectionTagFetcher.cpp  CollectionTagFetcher.h  LastFmTagFetcher.cpp  LastFmTagFetcher.h  LastFmTagFetcher_Tag.cpp  LastFmTagFetcher_Tag.h  LastFmTagFetcher_Tag_p.h  LastFmTagFetcher_Track.cpp  LastFmTagFetcher_Track.h  LastFmTagFetcher_Track_p.h  TagCloudModel.cpp  TagCloudModel.h  TagCloudView.cpp  TagsPane.cpp  TagsPane.h  WeightedTag.cpp  WeightedTag.h  WeightedTag_p.h  tables.sql
src/plugins/CollectionTouchScreenView/: ChildrenProxyModel.cpp  ChildrenProxyModel.h  TreeToListProxyModel.cpp  TreeToListProxyModel.h
src/plugins/CollectionTreeView/: CMakeLists.txt  CollectionFilter.cpp  CollectionFilter.h  CollectionTreeView.cpp  CollectionTreeView.h  CollectionWidget.cpp  CollectionWidget.h  QtCFString.cpp  QtCFString.h  ScopedCfPointer.h  SearchLineEdit.cpp  SearchLineEdit.h  SearchLineEdit_mac.cpp  SearchLineEdit_mac.h  SearchLineEdit_mac_p.cpp  SearchLineEdit_mac_p.h
src/plugins/FileSystemTab/: CMakeLists.txt  FileSystemModelWithToolTip.cpp  FileSystemModelWithToolTip.h  FileSystemTab.cpp  FileSystemTab.h
src/plugins/InfoWidget/: CMakeLists.txt  InfoWidget.cpp  InfoWidget.h  InfoWidget.ui  InfoWidget_Implementation.cpp  InfoWidget_Implementation.h
src/plugins/JerboaCollection/: CMakeLists.txt  CollectionScanner.cpp  CollectionScanner.h  FileLister.cpp  FileLister.h  JerboaCollection.cpp  JerboaCollection.h  JerboaCollection.qrc  JerboaCollection_FirstRunWizard.cpp  JerboaCollection_FirstRunWizard.h  JerboaCollection_Implementation.cpp  JerboaCollection_Implementation.h  tables.sql
src/plugins/JerboaPlaylist/: CMakeLists.txt  JerboaPlaylist.cpp  JerboaPlaylist.h  JerboaPlaylist_Implementation.cpp  JerboaPlaylist_Implementation.h
src/plugins/MacStyle/: CMakeLists.txt  MacStyle.cpp  MacStyle.h  MacStyle_Implementation.cpp  MacStyle_Implementation.h
src/plugins/Mpris/: CMakeLists.txt  Mpris.cpp  Mpris.h  MprisIdentification.cpp  MprisIdentification.h  MprisPlayer.cpp  MprisPlayer.h  MprisTracklist.cpp  MprisTracklist.h  org.freedesktop.MediaPlayer.player.xml  org.freedesktop.MediaPlayer.root.xml  org.freedesktop.MediaPlayer.tracklist.xml
src/plugins/NestedCollectionModel/: CMakeLists.txt  NestedCollectionModel.cpp  NestedCollectionModel.h  NestedCollectionModel.qrc  NestedCollectionModel_Implementation.cpp  NestedCollectionModel_Implementation.h
src/plugins/NetworkClient/: CMakeLists.txt  NetworkClient.cpp  NetworkClient.h  NetworkClient_ServerDiscoverer.cpp  NetworkClient_ServerDiscoverer.h
src/plugins/NetworkCommon/: CMakeLists.txt  NetworkCommon.cpp  NetworkCommon.h  NetworkMessage.cpp  NetworkMessage.h
src/plugins/NetworkServer/: CMakeLists.txt  NetworkServer.cpp  NetworkServer.h  NetworkServer_Implementation.cpp  NetworkServer_Implementation.h
src/plugins/PhononPlayer/: CMakeLists.txt  PhononPlayer.cpp  PhononPlayer.h  PhononPlayer_Implementation.cpp  PhononPlayer_Implementation.h
src/plugins/PlaylistModel/: CMakeLists.txt  PlaylistModel.cpp  PlaylistModel.h  PlaylistModel_Implementation.cpp  PlaylistModel_Implementation.h
src/plugins/ReplayGain/: CMakeLists.txt  ReplayGain.cpp  ReplayGain.h
src/plugins/Scrobbler/: CMakeLists.txt  Scrobbler.cpp  Scrobbler.h  Scrobbler.qrc  Scrobbler_FirstRunWizard.cpp  Scrobbler_FirstRunWizard.h  tables.sql
src/plugins/SeekToolBar/: CMakeLists.txt  SeekToolBar.cpp  SeekToolBar.h  SeekToolBar.qrc  SeekToolBar_Implementation.cpp  SeekToolBar_Implementation.h
src/plugins/StandardContainer/: .MainWindow.cpp.swp  CMakeLists.txt  MainWindow.cpp  MainWindow.h  SplitterHandleFuzzer.cpp  SplitterHandleFuzzer.h  StandardContainer.cpp  StandardContainer.h  StandardContainer.qrc
src/plugins/StandardPlaylistView/: CMakeLists.txt  StandardPlaylistView.cpp  StandardPlaylistView.h
src/plugins/StandardToolBar/: CMakeLists.txt  StandardToolBar.cpp  StandardToolBar.h  StandardToolBar.qrc  StandardToolBar_Implementation.cpp  StandardToolBar_Implementation.h
src/plugins/StandardToolBar/icons/actions/: edit-clear-list.svgz
src/plugins/StartPlaybackOnTrackAppend/: CMakeLists.txt  StartPlaybackOnTrackAppend.cpp  StartPlaybackOnTrackAppend.h
src/plugins/TagLibTagReader/: CMakeLists.txt  TagLibTagReader.cpp  TagLibTagReader.h  TagLibTagReader_Implementation.cpp  TagLibTagReader_Implementation.h
src/plugins/TrayIcon/: CMakeLists.txt  TrayIcon.cpp  TrayIcon.h  TrayIcon.qrc
src/plugins/VolumeToolBar/: CMakeLists.txt  VolumeToolBar.cpp  VolumeToolBar.h  VolumeToolBar_Implementation.cpp  VolumeToolBar_Implementation.h
