SET(
    CLASSES
    VolumeToolBar
    VolumeToolBar_Implementation
)

SET(SOURCES)
SET(HEADERS)
FOREACH(class ${CLASSES})
	LIST(APPEND SOURCES ${class}.cpp)
	LIST(APPEND HEADERS ${class}.h)
ENDFOREACH()

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
#QT4_ADD_RESOURCES(RESOURCE_SOURCES VolumeToolBar.qrc)
QT4_WRAP_CPP(MOC_SOURCES ${HEADERS})
ADD_LIBRARY(
	VolumeToolBar
	${SOURCES}
#	${RESOURCE_SOURCES}
	${MOC_SOURCES}
)
